# endpoint-sec

./: Cargo.toml  Justfile  README.md  appveyor.yml  rustfmt.toml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: build.yaml  release.yml
endpoint-sec/: Cargo.toml  Entitlement.plist
endpoint-sec-sys/: Cargo.toml
endpoint-sec-sys/src/: additional.rs  client.rs  lib.rs  message.rs  result_wrapping.rs  types.rs
endpoint-sec/src/: acl.rs  action.rs  audit.rs  client.rs  event.rs  lib.rs  message.rs  mute.rs  utils.rs
endpoint-sec/src/event/: event_access.rs  event_authentication.rs  event_authorization_judgement.rs  event_authorization_petition.rs  event_btm_launch_item_add.rs  event_btm_launch_item_remove.rs  event_chdir.rs  event_chroot.rs  event_clone.rs  event_close.rs  event_copyfile.rs  event_create.rs  event_cs_invalidated.rs  event_deleteextattr.rs  event_dup.rs  event_exchangedata.rs  event_exec.rs  event_exit.rs  event_fcntl.rs  event_file_provider_materialize.rs  event_file_provider_update.rs  event_fork.rs  event_fsgetpath.rs  event_gatekeeper_user_override.rs  event_get_task.rs  event_get_task_inspect.rs  event_get_task_name.rs  event_get_task_read.rs  event_getattrlist.rs  event_getextattr.rs  event_iokit_open.rs  event_kextload.rs  event_kextunload.rs  event_link.rs  event_listextattr.rs  event_login_login.rs  event_login_logout.rs  event_lookup.rs  event_lw_session_lock.rs  event_lw_session_login.rs  (+64 more)
endpoint-sec/tests/: client.rs  ui.rs
endpoint-sec/tests/ui/: test_client_cannot_be_smuggled_out.rs  test_client_cannot_be_smuggled_out.stderr  test_client_cannot_outlive_handler.rs  test_client_cannot_outlive_handler.stderr
