[workspace.package]
version = "0.3.3"
authors = ["HarfangLab Rust Team"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/HarfangLab/endpoint-sec"
rust-version = "1.65"

[workspace]
members = ["endpoint-sec/", "endpoint-sec-sys/"]
resolver = "2"

[workspace.dependencies]
# In workspace
endpoint-sec = { version = "0.3.3", path = "./endpoint-sec" }
endpoint-sec-sys = { version = "0.3.3", path = "./endpoint-sec-sys" }

# External - Required
block2 = "0.3"
libc = { version = "0.2", features = ["extra_traits"] }
mach2 = "0.4"
objc2 = "0.4"
static_assertions = "1.1"

# External - For tests
sysinfo = "0.28"
trybuild = "1.0"
