[package]
name = "endpoint-sec"

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "High-level Rust wrappers around the Endpoint Security Framework"
documentation = "https://docs.rs/endpoint-sec"
readme = "../README.md"

[features]
# The default feature activates the minimum to ensure developers are aware of
# what they use from the ES API with regards to the runtime version. This means
# this crate supports Endpoint Security from macOS 10.15.0 by default.
default = ["static_assertions"]

# Expose `AuditToken::from_pid()`
audit_token_from_pid = []

# Controls if `static_assertions` is included in dependencies, gating some
# compile-time checks.
static_assertions = ["dep:static_assertions"]

# Updated to the maximum version each time a new one is introduced
#
# When adding a new max version, remember to update the CI to test it too.
max = ["macos_15_4_0"]

macos_15_4_0 = ["macos_15_0_0", "endpoint-sec-sys/macos_15_4_0"]
macos_15_0_0 = ["macos_14_0_0", "endpoint-sec-sys/macos_15_0_0"]
macos_14_0_0 = ["macos_13_3_0", "endpoint-sec-sys/macos_14_0_0"]
macos_13_3_0 = ["macos_13_0_0", "endpoint-sec-sys/macos_13_3_0"]
macos_13_0_0 = ["macos_12_0_0", "endpoint-sec-sys/macos_13_0_0"]
macos_12_0_0 = ["macos_11_3_0", "endpoint-sec-sys/macos_12_0_0"]
macos_11_3_0 = ["macos_11_0_0", "endpoint-sec-sys/macos_11_3_0"]
macos_11_0_0 = ["macos_10_15_4", "endpoint-sec-sys/macos_11_0_0"]
macos_10_15_4 = ["macos_10_15_1", "endpoint-sec-sys/macos_10_15_4"]
macos_10_15_1 = ["endpoint-sec-sys/macos_10_15_1"]

[target.'cfg(target_os = "macos")'.dependencies]
# `objc2` is optional in the sys crate, but critical here: used in `Client::new`.
endpoint-sec-sys = { workspace = true, features = ["objc2"] }
# Used in central features such as deadlines and only constitutes basic bindings.
mach2.workspace = true
# Used a lot and only constitutes basic bindings.
libc.workspace = true
static_assertions = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dev-dependencies]
sysinfo.workspace = true
trybuild.workspace = true

[package.metadata.docs.rs]
features = ["max", "audit_token_from_pid", "static_assertions"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]
